Replaced uses of Double constructor taking a String with Double.valueOf() or Double.parseDouble() as these are more efficient (should have been part of previous commit)